--- a/src/DayDayUp/Strings/en-us/ArchivePage.resw
+++ b/src/DayDayUp/Strings/en-us/ArchivePage.resw
@@ -117,43 +117,28 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="About" xml:space="preserve">
-    <value>About</value>
+  <data name="Archive" xml:space="preserve">
+    <value>Archive</value>
   </data>
-  <data name="AboutDescription" xml:space="preserve">
-    <value>DayDayUp is in progress.</value>
+  <data name="Bias" xml:space="preserve">
+    <value>Bias rate is </value>
   </data>
-  <data name="AppTheme" xml:space="preserve">
-    <value>App theme</value>
+  <data name="Delete" xml:space="preserve">
+    <value>Delete</value>
   </data>
-  <data name="AppThemeDescription" xml:space="preserve">
-    <value>Select which app theme to display</value>
+  <data name="Duration" xml:space="preserve">
+    <value>Duration is </value>
   </data>
-  <data name="AppTitle" xml:space="preserve">
-    <value>DayDayUp</value>
+  <data name="EmptyList" xml:space="preserve">
+    <value>Empty list. Go to finish a task.</value>
   </data>
-  <data name="Dark" xml:space="preserve">
-    <value>Dark</value>
+  <data name="EstimatedDuration" xml:space="preserve">
+    <value>Estimated duration is </value>
   </data>
-  <data name="DefaultLanguage" xml:space="preserve">
-    <value>Same as Microsoft Windows</value>
+  <data name="Finish" xml:space="preserve">
+    <value>Finished in</value>
   </data>
-  <data name="Language" xml:space="preserve">
-    <value>Language</value>
-  </data>
-  <data name="LanguageDescription" xml:space="preserve">
-    <value>The app needs to be restarted when selecting another language</value>
-  </data>
-  <data name="Light" xml:space="preserve">
-    <value>Light</value>
-  </data>
-  <data name="MenuDisplayName" xml:space="preserve">
-    <value>Settings</value>
-  </data>
-  <data name="Settings" xml:space="preserve">
-    <value>Settings</value>
-  </data>
-  <data name="UseSystemSettings" xml:space="preserve">
-    <value>Use system settings</value>
+  <data name="Restore" xml:space="preserve">
+    <value>Restore</value>
   </data>
 </root>
