--- a/src/DayDayUp/Strings/en-us/HomePage.resw
+++ b/src/DayDayUp/Strings/en-us/HomePage.resw
@@ -117,43 +117,49 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="About" xml:space="preserve">
-    <value>About</value>
+  <data name="AddNewTodo" xml:space="preserve">
+    <value>Add a new todo...</value>
   </data>
-  <data name="AboutDescription" xml:space="preserve">
-    <value>DayDayUp is in progress.</value>
+  <data name="CreatedIn" xml:space="preserve">
+    <value>Created in</value>
   </data>
-  <data name="AppTheme" xml:space="preserve">
-    <value>App theme</value>
+  <data name="Delete" xml:space="preserve">
+    <value>Delete</value>
   </data>
-  <data name="AppThemeDescription" xml:space="preserve">
-    <value>Select which app theme to display</value>
+  <data name="DropDown12Hours" xml:space="preserve">
+    <value>12 hours</value>
   </data>
-  <data name="AppTitle" xml:space="preserve">
-    <value>DayDayUp</value>
+  <data name="DropDown1Day" xml:space="preserve">
+    <value>1 day</value>
   </data>
-  <data name="Dark" xml:space="preserve">
-    <value>Dark</value>
+  <data name="DropDown1Hour" xml:space="preserve">
+    <value>1 hour</value>
   </data>
-  <data name="DefaultLanguage" xml:space="preserve">
-    <value>Same as Microsoft Windows</value>
+  <data name="DropDown30Mins" xml:space="preserve">
+    <value>30 mins</value>
   </data>
-  <data name="Language" xml:space="preserve">
-    <value>Language</value>
+  <data name="DropDown6Hours" xml:space="preserve">
+    <value>6 hours</value>
   </data>
-  <data name="LanguageDescription" xml:space="preserve">
-    <value>The app needs to be restarted when selecting another language</value>
+  <data name="DropDownNone" xml:space="preserve">
+    <value>None</value>
   </data>
-  <data name="Light" xml:space="preserve">
-    <value>Light</value>
+  <data name="Duration" xml:space="preserve">
+    <value>Duration is</value>
   </data>
-  <data name="MenuDisplayName" xml:space="preserve">
-    <value>Settings</value>
+  <data name="EmptyList" xml:space="preserve">
+    <value>The list is empty now. Start by adding a new task.</value>
   </data>
-  <data name="Settings" xml:space="preserve">
-    <value>Settings</value>
+  <data name="EstimatedDuration" xml:space="preserve">
+    <value>Estimated duration is </value>
   </data>
-  <data name="UseSystemSettings" xml:space="preserve">
-    <value>Use system settings</value>
+  <data name="EstimatedDurationToolTip" xml:space="preserve">
+    <value>Esitimated duration</value>
+  </data>
+  <data name="PredictionDuration" xml:space="preserve">
+    <value>Predicted Durations</value>
+  </data>
+  <data name="Status" xml:space="preserve">
+    <value>Status is</value>
   </data>
 </root>
