--- a/src/DayDayUp/Strings/en-us/MainPage.resw
+++ b/src/DayDayUp/Strings/en-us/MainPage.resw
@@ -117,43 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="About" xml:space="preserve">
-    <value>About</value>
-  </data>
-  <data name="AboutDescription" xml:space="preserve">
-    <value>DayDayUp is in progress.</value>
-  </data>
-  <data name="AppTheme" xml:space="preserve">
-    <value>App theme</value>
-  </data>
-  <data name="AppThemeDescription" xml:space="preserve">
-    <value>Select which app theme to display</value>
-  </data>
-  <data name="AppTitle" xml:space="preserve">
+  <data name="AppDisplayName" xml:space="preserve">
     <value>DayDayUp</value>
   </data>
-  <data name="Dark" xml:space="preserve">
-    <value>Dark</value>
+  <data name="Archive" xml:space="preserve">
+    <value>Archive</value>
   </data>
-  <data name="DefaultLanguage" xml:space="preserve">
-    <value>Same as Microsoft Windows</value>
-  </data>
-  <data name="Language" xml:space="preserve">
-    <value>Language</value>
-  </data>
-  <data name="LanguageDescription" xml:space="preserve">
-    <value>The app needs to be restarted when selecting another language</value>
-  </data>
-  <data name="Light" xml:space="preserve">
-    <value>Light</value>
-  </data>
-  <data name="MenuDisplayName" xml:space="preserve">
-    <value>Settings</value>
-  </data>
-  <data name="Settings" xml:space="preserve">
-    <value>Settings</value>
-  </data>
-  <data name="UseSystemSettings" xml:space="preserve">
-    <value>Use system settings</value>
+  <data name="Home" xml:space="preserve">
+    <value>Home</value>
   </data>
 </root>
