--- a/src/DayDayUp/Strings/zh-cn/HomePage.resw
+++ b/src/DayDayUp/Strings/zh-cn/HomePage.resw
@@ -117,43 +117,49 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="About" xml:space="preserve">
-    <value>About</value>
+  <data name="AddNewTodo" xml:space="preserve">
+    <value>添加一个待办事项</value>
   </data>
-  <data name="AboutDescription" xml:space="preserve">
-    <value>DayDayUp is in progress.</value>
+  <data name="CreatedIn" xml:space="preserve">
+    <value>创建于</value>
   </data>
-  <data name="AppTheme" xml:space="preserve">
-    <value>App theme</value>
+  <data name="Delete" xml:space="preserve">
+    <value>删除</value>
   </data>
-  <data name="AppThemeDescription" xml:space="preserve">
-    <value>Select which app theme to display</value>
+  <data name="DropDown12Hours" xml:space="preserve">
+    <value>12 小时</value>
   </data>
-  <data name="AppTitle" xml:space="preserve">
-    <value>DayDayUp</value>
+  <data name="DropDown1Day" xml:space="preserve">
+    <value>1 天</value>
   </data>
-  <data name="Dark" xml:space="preserve">
-    <value>Dark</value>
+  <data name="DropDown1Hour" xml:space="preserve">
+    <value>1 小时</value>
   </data>
-  <data name="DefaultLanguage" xml:space="preserve">
-    <value>Same as Microsoft Windows</value>
+  <data name="DropDown30Mins" xml:space="preserve">
+    <value>30 分钟</value>
   </data>
-  <data name="Language" xml:space="preserve">
-    <value>Language</value>
+  <data name="DropDown6Hours" xml:space="preserve">
+    <value>6 小时</value>
   </data>
-  <data name="LanguageDescription" xml:space="preserve">
-    <value>The app needs to be restarted when selecting another language</value>
+  <data name="DropDownNone" xml:space="preserve">
+    <value>无</value>
   </data>
-  <data name="Light" xml:space="preserve">
-    <value>Light</value>
+  <data name="Duration" xml:space="preserve">
+    <value>持续时间为</value>
   </data>
-  <data name="MenuDisplayName" xml:space="preserve">
-    <value>Settings</value>
+  <data name="EmptyList" xml:space="preserve">
+    <value>列表为空，添加一个待办事项以开始</value>
   </data>
-  <data name="Settings" xml:space="preserve">
-    <value>Settings</value>
+  <data name="EstimatedDuration" xml:space="preserve">
+    <value>预计持续时间为</value>
   </data>
-  <data name="UseSystemSettings" xml:space="preserve">
-    <value>Use system settings</value>
+  <data name="EstimatedDurationToolTip" xml:space="preserve">
+    <value>预计持续时间</value>
+  </data>
+  <data name="PredictionDuration" xml:space="preserve">
+    <value>持续时间预测</value>
+  </data>
+  <data name="Status" xml:space="preserve">
+    <value>状态为</value>
   </data>
 </root>
